Comecei a estilizar o site

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Bizu Vegano</h1>
+        <menu>
+
+        </menu>
+    </header>
+    <main>
+        <section>
+            <h2>Diferença entre veganismo e vegetarianismo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eum eius ipsam enim, veniam fuga sint aliquid suscipit sapiente voluptatibus doloremque autem qui aliquam? Nihil ullam tempore ut sequi odit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora hic porro nihil illum est repudiandae dignissimos neque, tempore consectetur excepturi, harum doloremque ut libero, impedit laborum praesentium enim distinctio ratione.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora consequatur veniam perspiciatis possimus vero minus nihil quisquam inventore molestias accusamus, similique dignissimos. Beatae exercitationem sapiente commodi labore. Corporis, fugiat ad!</p>
+        </section>
+    </main>
 </body>
 </html>
