--- a/index.html
+++ b/index.html
@@ -16,8 +16,18 @@
     <main>
         <section>
             <h2>Diferença entre veganismo e vegetarianismo</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt eum eius ipsam enim, veniam fuga sint aliquid suscipit sapiente voluptatibus doloremque autem qui aliquam? Nihil ullam tempore ut sequi odit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora hic porro nihil illum est repudiandae dignissimos neque, tempore consectetur excepturi, harum doloremque ut libero, impedit laborum praesentium enim distinctio ratione.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora consequatur veniam perspiciatis possimus vero minus nihil quisquam inventore molestias accusamus, similique dignissimos. Beatae exercitationem sapiente commodi labore. Corporis, fugiat ad!</p>
+            <p>O veganismo não é uma dieta, é uma filosofia de vida comprometida com a causa do bem- estar animal. Por consequência, não faz sentido o vegano se alimentar de produtos derivados da exploração e do abate de animais.
+            </p>
+            <p>Já o vegetarianismo é uma dieta alimentar a base de plantas, sem ingredientes de origem animal. Por exemplo, se você segue uma dieta vegetariana estrita, mas o seu motivo é apenas ter  uma saúde melhor, você não é vegano, mas sim vegetariano. Veganismo <strong>SEMPRE</strong> é pelos animais!
+            </p>
+            <p>Então, pela lógica, um hambúrguer 100% vegetal fabricado por empresas que tem como lucro principal o abate de animais não pode ser considerado um alimento vegano, entendem? É um alimento vegetariano.
+            </p>
+            <p>Claro que radicalismo e extremismo nunca é legal e às vezes, por praticidade ou outro motivo, iremos precisar usar um ou outro produto fabricado por empresas que exploram animais.
+            Mas devemos tentar ao máximo consumir os produtos dos empreendedores veganos, que são mais naturais, saudáveis, saborosos e muitas vezes até mais baratos. Assim fortalecemos a causa e nos mantemos coerentes.
+            </p>
+            <p>Aqui, vou indicar estabelecimentos veganos e locais que têm opções inclusivas no cardápio. Meu objetivo é fortalecer o veganismo e ajudar os vegetarianos a saber onde encontrar opções vegetarianas gostosas na cidade. 
+            </p>
+            <p><strong>Se alimente conscientemente!</strong></p>
         </section>
     </main>
 </body>
