Atualizei o menu em index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <header>
         <h1>Bizu Vegano</h1>
         <menu>
-
+            <ul>
+                <li><a href="#">Restaurantes Veganos/Vegetarianos</a></li>
+                <li><a href="#">Confeitarias Veganas</a></li>
+                <li><a href="#">Quero comer</a></li>
+                <li><a href="#">O que comer</a></li>
+                <li><a href="#">Receitas</a></li>
+            </ul>
         </menu>
     </header>
     <main>
