Iniciei o estilo do menu

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
+    
     <header>
         <h1>Bizu Vegano</h1>
         <menu>
-            <ul>
-                <li><a href="#">Restaurantes Veganos/Vegetarianos</a></li>
-                <li><a href="#">Confeitarias Veganas</a></li>
-                <li><a href="#">Quero comer</a></li>
-                <li><a href="#">O que comer</a></li>
-                <li><a href="#">Receitas</a></li>
-            </ul>
+            <a href="#">Restaurantes Veganos/Vegetarianos</a>
+            <a href="#">Confeitarias Veganas</a>
+            <a href="#">Quero comer</a>
+            <a href="#">O que comer</a>
+            <a href="#">Receitas</a>
         </menu>
     </header>
+    
     <main>
         <section>
             <h2>Diferença entre veganismo e vegetarianismo</h2>
