--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bizu Vegano</title>
-    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
 </head>
 <body>
     
@@ -13,7 +13,7 @@
         <menu>
             <a href="#">Restaurantes Veganos/Vegetarianos</a>
             <a href="#">Confeitarias Veganas</a>
-            <a href="#">Quero comer</a>
+            <a href="#">Onde comer</a>
             <a href="#">O que comer</a>
             <a href="#">Receitas</a>
         </menu>
