Coloquei o menu burguer

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bizu Vegano</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="estilos/style.css" media="all">
+
 </head>
 <body>
     
     <header>
         <h1>Bizu Vegano</h1>
+        <i id="burguer" class="material-icons">menu</i>
         <menu>
             <a href="#">Restaurantes Veganos/Vegetarianos</a>
             <a href="#">Confeitarias Veganas</a>
