--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-queries.css">
 
 </head>
 <body>
@@ -15,11 +16,13 @@
         <h1>Bizu Vegano</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="menu">
-            <a href="#">Restaurantes Veganos/Vegetarianos</a>
-            <a href="#">Confeitarias Veganas</a>
-            <a href="#">Onde comer</a>
-            <a href="#">O que comer</a>
-            <a href="#">Receitas</a>
+            <ul>
+                <li><a href="#">Restaurantes Veganos/Vegetarianos</a></li>
+                <li><a href="#">Confeitarias Veganas</a></li>
+                <li><a href="#">Onde comer</a></li>
+                <li><a href="#">O que comer</a></li>
+                <li><a href="#">Receitas</a></li>
+            </ul>
         </menu>
     </header>
     
