Alterei index.html

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="menu">
             <ul>
-                <li><a href="#">Restaurantes Veganos/Vegetarianos</a></li>
-                <li><a href="#">Confeitarias Veganas</a></li>
-                <li><a href="#">Onde comer</a></li>
-                <li><a href="#">O que comer</a></li>
-                <li><a href="#">Receitas</a></li>
+                <li><a href="#">Restaurantes</a></li>
+                <li><a href="#">Confeitarias</a></li>
+                <li><a href="#">Onde comer?</a></li>
+                <li><a href="#">O que comer?</a></li>
+                <li><a href="#">Receitinhas</a></li>
             </ul>
         </menu>
     </header>
