--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>Diferença entre veganismo e vegetarianismo</h2>
             <p>O veganismo não é uma dieta, é uma filosofia de vida comprometida com a causa do bem- estar animal. Por consequência, não faz sentido o vegano se alimentar de produtos derivados da exploração e do abate de animais.
             </p>
-            <p>Já o vegetarianismo é uma dieta alimentar a base de plantas, sem ingredientes de origem animal. Por exemplo, se você segue uma dieta vegetariana estrita, mas o seu motivo é apenas ter  uma saúde melhor, você não é vegano, mas sim vegetariano. Veganismo <strong>SEMPRE</strong> é pelos animais!
+            <p>Já o vegetarianismo é uma dieta alimentar a base de plantas, sem ingredientes de origem animal. Por exemplo, se você segue uma dieta vegetariana estrita, mas o seu motivo é apenas ter  uma saúde melhor, você não é vegano, mas sim vegetariano. Veganismo SEMPRE é pelos animais!
             </p>
             <p>Então, pela lógica, um hambúrguer 100% vegetal fabricado por empresas que tem como lucro principal o abate de animais não pode ser considerado um alimento vegano, entendem? É um alimento vegetariano.
             </p>
@@ -40,7 +40,7 @@
             </p>
             <p>Aqui, vou indicar estabelecimentos veganos e locais que têm opções inclusivas no cardápio. Meu objetivo é fortalecer o veganismo e ajudar os vegetarianos a saber onde encontrar opções vegetarianas gostosas na cidade. 
             </p>
-            <p><strong>Se alimente conscientemente!</strong></p>
+            <p>Se alimente conscientemente!</p>
         </section>
     </main>
     <script>
