--- a/index.html
+++ b/index.html
@@ -36,13 +36,18 @@
             <p>Então, pela lógica, um hambúrguer 100% vegetal fabricado por empresas que tem como lucro principal o abate de animais não pode ser considerado um alimento vegano, entendem? É um alimento vegetariano.
             </p>
             <p>Claro que radicalismo e extremismo nunca é legal e às vezes, por praticidade ou outro motivo, iremos precisar usar um ou outro produto fabricado por empresas que exploram animais.
-            Mas devemos tentar ao máximo consumir os produtos dos empreendedores veganos, que são mais naturais, saudáveis, saborosos e muitas vezes até mais baratos. Assim fortalecemos a causa e nos mantemos coerentes.
+            Mas devemos tentar ao máximo consumir os produtos dos empreendedores veganos, que são mais naturais, saudáveis, saborosos e muitas vezes até mais baratos. Assim contribuímos com a proposta vegana e nos mantemos coerentes.
             </p>
-            <p>Aqui, vou indicar estabelecimentos veganos e locais que têm opções inclusivas no cardápio. Meu objetivo é fortalecer o veganismo e ajudar os vegetarianos a saber onde encontrar opções vegetarianas gostosas na cidade. 
+            <p>Aqui, vou indicar estabelecimentos veganos e locais que têm opções inclusivas no cardápio. Meu objetivo é fortalecer o veganismo e ajudar os vegetarianos a saber onde encontrar opções vegetarianas gostosas na cidade de Fortaleza. 
             </p>
             <p>Se alimente conscientemente!</p>
         </section>
     </main>
+
+    <footer>
+        <p>Fortaleza, Ceará - 2023</p>
+    </footer>
+
     <script>
         functionmudouTamanho() {
             if (window.innerWidth >= 768) {
