--- a/index.html
+++ b/index.html
@@ -44,19 +44,14 @@
         </section>
     </main>
 
-    <footer>
-        <p>Fortaleza, Ceará - 2023</p>
-    </footer>
-
     <script>
-        functionmudouTamanho() {
+        function mudouTamanho() {
             if (window.innerWidth >= 768) {
-                itens.style.display = 'block'
+                menu.style.display = 'block'
             } else {
-                itens.style.display = 'none'
+                menu.style.display = 'none'
             }
         }
-
 
         function clickMenu() {
                 if (menu.style.display == 'block') {
@@ -66,5 +61,9 @@
                 }
         }
     </script>
+
+    <footer>
+        <p>Fortaleza, Ceará - 2023</p>
+    </footer>
 </body>
 </html>
