--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="menu">
             <ul>
-                <li><a href="#">Restaurantes</a></li>
-                <li><a href="#">Confeitarias</a></li>
-                <li><a href="#">Onde comer?</a></li>
-                <li><a href="#">O que comer?</a></li>
-                <li><a href="#">Receitinhas</a></li>
+                <li><a href="restaurantes.html">Restaurantes</a></li>
+                <li><a href="confeitarias.html">Confeitarias</a></li>
+                <li><a href="onde-comer.html">Onde comer?</a></li>
+                <li><a href="o-que-comer.html">O que comer?</a></li>
+                <li><a href="receitas.html">Receitinhas</a></li>
             </ul>
         </menu>
     </header>
@@ -45,13 +45,13 @@
     </main>
 
     <script>
-        function mudouTamanho() {
+        /*function mudouTamanho() {
             if (window.innerWidth >= 768) {
                 menu.style.display = 'block'
             } else {
                 menu.style.display = 'none'
             }
-        }
+        }*/
 
         function clickMenu() {
                 if (menu.style.display == 'block') {
