Comecei o estilo das páginas

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="estilos/media-queries.css">
 
 </head>
+
 <body onresize="mudouTamanho">
     
     <header>
@@ -17,6 +18,7 @@
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="menu">
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="restaurantes.html">Restaurantes</a></li>
                 <li><a href="confeitarias.html">Confeitarias</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
