Criei cosmeticos.html

--- a/cosmeticos.html
+++ b/cosmeticos.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Confeitarias</title>
+    <title>Cosméticos Veganos em Fortaleza</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/paginas.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
 <body>
     <header>
-        <h1>Confeitarias Vegetarianas</h1>
+        <h1>Cosméticos Veganos em Fortaleza</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="menu">
             <ul>
