--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="onde-comer.html">Onde comer?</a></li>
                 <li><a href="o-que-comer.html">O que comer?</a></li>
                 <li><a href="receitas.html">Receitinhas</a></li>
+                <li><a href="cosmeticos.html">Cosméticos</a></li>
             </ul>
         </menu>
     </header>
@@ -33,16 +34,18 @@
             <h2>Diferença entre veganismo e vegetarianismo</h2>
             <p>O veganismo não é uma dieta, é uma filosofia de vida comprometida com a causa do bem- estar animal. Por consequência, não faz sentido o vegano se alimentar de produtos derivados da exploração e do abate de animais.
             </p>
-            <p>Já o vegetarianismo é uma dieta alimentar a base de plantas, sem ingredientes de origem animal. Por exemplo, se você segue uma dieta vegetariana estrita, mas o seu motivo é apenas ter  uma saúde melhor, você não é vegano, mas sim vegetariano. Veganismo SEMPRE é pelos animais!
+            <p>Já o vegetarianismo é uma dieta alimentar a base de plantas, sem ingredientes de origem animal.
+            <p>Existem as variações do vegetarianismo, onde são inclusos alguns alimentos de origem animal, por exemplo, os lacto-vegetarianos consomem laticínios e os ovo-lacto-vegetarianos consomem ovos e derivados de leite.</p> 
+            <p>O Veganismo SEMPRE é pelos animais! Então, se você segue uma dieta vegetariana estrita, mas o seu motivo é apenas ter  uma saúde melhor, você não é vegano, mas sim vegetariano. 
             </p>
-            <p>Então, pela lógica, um hambúrguer 100% vegetal fabricado por empresas que tem como lucro principal o abate de animais não pode ser considerado um alimento vegano, entendem? É um alimento vegetariano.
+            <p>Sendo assim, pela lógica, um hambúrguer 100% vegetal fabricado por empresas que tem como lucro principal o abate de animais não pode ser considerado um alimento vegano, entendem? É um alimento vegetariano.
             </p>
             <p>Claro que radicalismo e extremismo nunca é legal e às vezes, por praticidade ou outro motivo, iremos precisar usar um ou outro produto fabricado por empresas que exploram animais.
             Mas devemos tentar ao máximo consumir os produtos dos empreendedores veganos, que são mais naturais, saudáveis, saborosos e muitas vezes até mais baratos. Assim contribuímos com a proposta vegana e nos mantemos coerentes.
             </p>
             <p>Aqui, vou indicar estabelecimentos veganos e locais que têm opções inclusivas no cardápio. Meu objetivo é fortalecer o veganismo e ajudar os vegetarianos a saber onde encontrar opções vegetarianas gostosas na cidade de Fortaleza. 
             </p>
-            <p>Se alimente conscientemente!</p>
+            <p style="text-align: center;">Se alimente conscientemente!</p>
         </section>
     </main>
 
