--- a/onde-comer.html
+++ b/onde-comer.html
@@ -20,6 +20,7 @@
                 <li><a href="onde-comer.html">Onde comer?</a></li>
                 <li><a href="o-que-comer.html">O que comer?</a></li>
                 <li><a href="receitas.html">Receitinhas</a></li>
+                <li><a href="index.html">Cosméticos</a></li>
             </ul>
         </menu>
     </header>
