Incluí a página de cafés e mudei a fonte do título principal

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <li><a href="confeitarias.html">Confeitarias</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
                 <li><a href="o-que-comer.html">O que comer?</a></li>
+                <li><a href="cafes.hmtl">Cafés</a></li>
                 <li><a href="receitas.html">Receitinhas</a></li>
                 <li><a href="cosmeticos.html">Cosméticos</a></li>
             </ul>
