Alterei algumas imagens de fundo

--- a/confeitarias.html
+++ b/confeitarias.html
@@ -7,6 +7,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/paginas.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
+    <style>
+        body {
+            height: 100vh;
+            background: black url(imagens/background-confeitarias.jpg) center center no-repeat fixed;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -19,7 +26,7 @@
                 <li><a href="confeitarias.html">Confeitarias</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
                 <li><a href="o-que-comer.html">O que comer?</a></li>
-                <li><a href="cafes.hmtl">Cafés</a></li>
+                <li><a href="cafes.html">Cafés</a></li>
                 <li><a href="receitas.html">Receitinhas</a></li>
                 <li><a href="cosmeticos.html">Cosméticos</a></li>
             </ul>
