Alterei mais planos de fundo

--- a/receitas.html
+++ b/receitas.html
@@ -7,6 +7,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/paginas.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
+    <style>
+        body {
+            height: 100vh;
+            background: black url(imagens/background-receitas.jpg) center center no-repeat fixed;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
     <header>
