Criei lanchonetes.html

--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receitas</title>
+    <title>Lanchonetes</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/paginas.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
     <style>
         body {
             height: 100vh;
-            background: black url(imagens/background-receitas.jpg) center center no-repeat fixed;
+            background: black url(imagens/background-o-que-comer.jpg) center center no-repeat fixed;
             background-size: cover;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Receitinhas Práticas</h1>
+        <h1>Lanchonetes vegetarianas</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="menu">
             <ul>
@@ -27,7 +27,7 @@
                 <li><a href="confeitarias.html">Confeitarias</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
                 <li><a href="o-que-comer.html">O que comer?</a></li>
-                <li><a href="cafes.hmtl">Cafés</a></li>
+                <li><a href="cafes.html">Cafés</a></li>
                 <li><a href="receitas.html">Receitinhas</a></li>
                 <li><a href="cosmeticos.html">Cosméticos</a></li>
             </ul>
