--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="restaurantes.html">Restaurantes</a></li>
+                <li><a href="lanchonetes.html">Lanchonetes</a></li>
                 <li><a href="confeitarias.html">Confeitarias</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
                 <li><a href="o-que-comer.html">O que comer?</a></li>
