--- a/receitas.html
+++ b/receitas.html
@@ -25,9 +25,10 @@
                 <li><a href="restaurantes.html">Restaurantes</a></li>
                 <li><a href="lanchonetes.html">Lanchonetes</a></li>
                 <li><a href="confeitarias.html">Confeitarias</a></li>
+                <li><a href="sorvetes.html">Sorvetes</a></li>
+                <li><a href="cafes.html">Cafés</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
                 <li><a href="o-que-comer.html">O que comer?</a></li>
-                <li><a href="cafes.hmtl">Cafés</a></li>
                 <li><a href="receitas.html">Receitinhas</a></li>
                 <li><a href="cosmeticos.html">Cosméticos</a></li>
             </ul>
