Criei páginas de empórios e queijos e fiz atualizações

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <li><a href="restaurantes.html">Restaurantes</a></li>
                 <li><a href="lanchonetes.html">Lanchonetes</a></li>
                 <li><a href="confeitarias.html">Confeitarias</a></li>
+                <li><a href="emporios.html">Empórios</a></li>
+                <li><a href="queijos.html">Queijarias</a></li>
                 <li><a href="sorvetes.html">Sorvetes</a></li>
                 <li><a href="cafes.html">Cafés</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
