Corrigi erro em queijos.html

--- a/queijos.html
+++ b/queijos.html
@@ -38,7 +38,7 @@
     </header>
     
     <main>
-        <p>Sessão destinada para divulgação de empórios especializados em embutidos e produtos industrializados veganos.</p>
+        <p>Queijarias veganas artesanais.</p>
         <div class="lojas">
             <h3>B.E.N.</h3>
             <p>Queijos veganos curados.</p>
