--- a/queijos.html
+++ b/queijos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosméticos Veganos em Fortaleza</title>
+    <title>Queijos Veganos em Fortaleza</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/paginas.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h1>Cosméticos Veganos em Fortaleza</h1>
+        <h1>Queijos Veganos em Fortaleza</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="menu">
             <ul>
