Atualizei restaurantes.html

--- a/restaurantes.html
+++ b/restaurantes.html
@@ -54,6 +54,48 @@
             <p>Endereço: Rua Confúcio Pamplona, 339, Benfica - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Annapurna</h3>
+            <p>Restaurante vegetariano com menu inspirado na culinária internacional. Todo dia são novas temáticas para você escolher. A refeição acompanha sopa e suco e pode repetir à vontade.</p>
+            <p>Adoro o Annapurna, indico demais!</p>
+            <p>Endereço: Rua Paracuru, 34 - Centro</p>
+            <p>Clique <a href="https://instagram.com/annapurnairacema?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Veg Family</h3>
+            <p>Almoço, lanches e café da manhã. Muito bom!</p>
+            <p>Endereço: Av. da Universidade, 2476, Benfica - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/veg.family7?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Govinda</h3>
+            <p>Comida elaborada com base na Medicina Ayurvédica. Deliciosa!</p>
+            <p>Somente delivery</p>
+            <p>Clique <a href="https://instagram.com/govindavegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Terrana</h3>
+            <p>Almoço vegano. Ótima comida!</p>
+            <p>Endereço: Rua Marco, 309 - n. 05, Montese - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/terrana.vegano?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Mandir</h3>
+            <p>Um dos restaurantes vegetarianos mais antigos de Fortaleza. Culinária indiana. Muito bom!</p>
+            <p>Endereço: Rua Padre Francisco Pinto, 257, Benfica - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/mandir.amor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Mandir</h3>
+            <p>Um dos restaurantes vegetarianos mais antigos de Fortaleza. Culinária indiana. Muito bom!</p>
+            <p>Endereço: Rua Padre Francisco Pinto, 257, Benfica - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/mandir.amor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Malaguetta</h3>
+            <p>Endereço: Rua João Gentil, 241, Benfica - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/malaguetta_restaurante_vegano?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
