Atualizei restaurantes.html

--- a/restaurantes.html
+++ b/restaurantes.html
@@ -86,10 +86,10 @@
             <p>Clique <a href="https://instagram.com/mandir.amor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
-            <h3>Mandir</h3>
-            <p>Um dos restaurantes vegetarianos mais antigos de Fortaleza. Culinária indiana. Muito bom!</p>
-            <p>Endereço: Rua Padre Francisco Pinto, 257, Benfica - Fortaleza</p>
-            <p>Clique <a href="https://instagram.com/mandir.amor?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+            <h3>Buendia</h3>
+            <p>Marmitaria vegana. Delivery.</p>
+            <p>Somente delivery.</p>
+            <p>Clique <a href="https://instagram.com/buendiacomidavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
             <h3>Malaguetta</h3>
