--- a/restaurantes.html
+++ b/restaurantes.html
@@ -96,6 +96,12 @@
             <p>Endereço: Rua João Gentil, 241, Benfica - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/malaguetta_restaurante_vegano?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Pachamama Cultural</h3>
+            <p>Funciona à noite.</p>
+            <p>Endereço: Rua Barão do Rio Branco, 2734 - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
     </main>
     
     <script>
