Criei festas.html

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="queijos.html">Queijarias</a></li>
                 <li><a href="sorvetes.html">Sorvetes</a></li>
                 <li><a href="cafes.html">Cafés</a></li>
+                <li><a href="festas.html">Festas</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
                 <li><a href="o-que-comer.html">O que comer?</a></li>
                 <li><a href="receitas.html">Receitinhas</a></li>
