--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
     <main>
         <section>
             <h2>Diferença entre veganismo e vegetarianismo</h2>
-            <p>O veganismo não é uma dieta, é uma filosofia de vida comprometida com a causa do bem- estar animal. Por consequência, não faz sentido o vegano se alimentar de produtos derivados da exploração e do abate de animais.
-            </p>
-            <p>Já o vegetarianismo é uma dieta alimentar a base de plantas, sem ingredientes de origem animal.
+            <p>O veganismo não é uma dieta, é uma filosofia de vida comprometida com a causa do bem- estar animal. Por consequência, não faz sentido o vegano se alimentar de produtos derivados da exploração e do abate de animais.</p>
+            <p>Já o vegetarianismo é uma dieta alimentar a base de plantas, sem ingredientes de origem animal.</p>
             <p>Existem as variações do vegetarianismo, onde são inclusos alguns alimentos de origem animal, por exemplo, os lacto-vegetarianos consomem laticínios e os ovo-lacto-vegetarianos consomem ovos e derivados de leite.</p> 
             <p>O Veganismo SEMPRE é pelos animais! Então, se você segue uma dieta vegetariana estrita, mas o seu motivo é apenas ter  uma saúde melhor, você não é vegano, mas sim vegetariano. 
             </p>
