Mudei de receitas para dicas

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="festas.html">Festas</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
                 <li><a href="o-que-comer.html">O que comer?</a></li>
-                <li><a href="receitas.html">Receitinhas</a></li>
+                <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="cosmeticos.html">Cosméticos</a></li>
             </ul>
         </menu>
