--- a/dicas.html
+++ b/dicas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receitas</title>
+    <title>Dicas</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="estilos/paginas.css">
     <link rel="stylesheet" href="estilos/media-queries.css">
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h1>Receitinhas Práticas</h1>
+        <h1>Dicas e Receitinhas Práticas</h1>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="menu">
             <ul>
@@ -32,7 +32,7 @@
                 <li><a href="festas.html">Festas</a></li>
                 <li><a href="onde-comer.html">Onde comer?</a></li>
                 <li><a href="o-que-comer.html">O que comer?</a></li>
-                <li><a href="receitas.html">Receitinhas</a></li>
+                <li><a href="dicas.html">Dicas</a></li>
                 <li><a href="cosmeticos.html">Cosméticos</a></li>
             </ul>
         </menu>
