--- a/festas.html
+++ b/festas.html
@@ -42,8 +42,33 @@
         <p>Sessão destinada a indicar locais que fazem encomendas de saldadinhos, doces e bolos para festas.</p>
         <div class="lojas">
             <h3>Veg Livre</h3>
+            <p>Salgadinhos, docinhos e bolos.</p>
             <p>Clique <a href="https://instagram.com/veglivre?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Pimenta Vegana</h3>
+            <p>Salgadinhos e bolos sob encomenda.</p>
+            <p>Clique <a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Bike Vegan</h3>
+            <p>Salgadinhos sob encomenda.</p>
+            <p>Somente delivery.</p>
+            <p>Clique <a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Pachamama Cultural</h3>
+            <p>Salgadinhos.</p>
+            <p>Endereço: Rua Barão do Rio Branco, 2734 - Fortaleza</p>
+            <p>Clique <a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Borges Baker</h3>
+            <p>Bolos confeitados e docinhos.</p>
+            <p>Endereço: Rua João Regino, 38 - Parque Manibura</p>
+            <p>Clique <a href="https://instagram.com/borgesbaker?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+
     </main>
     
     <script>
