--- a/confeitarias.html
+++ b/confeitarias.html
@@ -49,7 +49,7 @@
         <div class="lojas">
             <h3>Sabor Alternativo</h3>
             <p>Diversos sabores de tortas e bolos.</p>
-            <p>Quinzenalmente na <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA=="> Feira Agroecológica do Benfica</a> </p>
+            <p>Quinzenalmente na <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==" target="_blank"> Feira Agroecológica do Benfica</a> </p>
             <p>Clique <a href="https://instagram.com/sabor_alt?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
     </main>
