--- a/restaurantes.html
+++ b/restaurantes.html
@@ -51,7 +51,7 @@
             <h3>Pimenta Vegana</h3>
             <p>Um dos melhores restaurantes veganos de Fortaleza. A comida é muito saborosa e o preço bastante acessível.</p>
             <p>No cardápio encontramos almoço e lanches. Também possuem uma carta de encomendas com salgadinhos, pizzas, pães, tortas, bolos, etc.</p>
-            <p>Participam da Feira Agroecológica do Benfica, que ocorre quinzenalmente e onde podemos encontrar várias opções de lanches veganos.</p>
+            <p>Participam da <a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==" target="_blank"> Feira Agroecológica do Benfica</a>, que ocorre quinzenalmente e onde podemos encontrar várias opções de lanches veganos.</p>
             <p>Endereço: Rua Confúcio Pamplona, 339, Benfica - Fortaleza</p>
             <p>Clique <a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
