--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -51,6 +51,11 @@
             <p>Clique <a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Cozinha da Luz</h3>
+            <p>Congelados Veganos.</p>
+            <p>Clique <a href="https://instagram.com/cozinhadaluz?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>GoVegan</h3>
             <p>Delivery</p>
             <p>Clique <a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
