--- a/onde-comer.html
+++ b/onde-comer.html
@@ -43,11 +43,14 @@
             <h2>Pizza!</h2>
             <ul>
                 <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
-                <li><a href="https://instagram.com/forneriagaspar?igshid=MzRlODBiNWFlZA==" target="_blank">Forneria Gaspar</a></li>
+                <li><a href="https://instagram.com/forneriagaspar?igshid=MzRlODBiNWFlZA==" target="_blank">Forneria Gaspar (A melhor, na minha opinião!)</a></li>
                 <li><a href="https://instagram.com/pachamamacultural?igshid=MzRlODBiNWFlZA==" target="_blank">Pachamama</a></li>
                 <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">GoVegan</a></li>
                 <li><a href="https://instagram.com/lafioritapizza?igshid=MzRlODBiNWFlZA==" target="_blank">La Fiorita</a></li>
                 <li><a href="https://instagram.com/vignolioficial?igshid=MzRlODBiNWFlZA==" target="_blank">Vignoli</a></li>
+                <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi (Lá também vende lasanhas deliciosas!)</a></li>
+                <li><a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">Pimenta Vegana (Somente por encomenda!)</a></li>
+                
             </ul>
         </div>
     </main>
