--- a/dicas.html
+++ b/dicas.html
@@ -39,7 +39,29 @@
     </header>
     
     <main>
-        <p>Página ainda em construção!</p>
+        <div class="lojas">
+            <h2>Orgânicos</h2>
+            <ul>
+                <li><a href="https://instagram.com/feiragroecologicabenfica?igshid=MzRlODBiNWFlZA==" target="_blank">Feira Agroecológica do Benfica</a></li>
+                <li><a href="https://instagram.com/feiracaroa?igshid=MzRlODBiNWFlZA==" target="_blank">Feira Caroá</a></li>
+                <li><a href="https://instagram.com/mudameumundo?igshid=YmMyMTA2M2Y=" target="_blank">Muda Meu Mundo</a></li>
+                <li><a href="https://instagram.com/portaldoorganico?igshid=YmMyMTA2M2Y=" target="_blank">Portal do Orgânico</a></li>
+                <li><a href="https://instagram.com/lafeiraorganica?igshid=YmMyMTA2M2Y=" target="_blank">La Feira Orgânica</a></li>
+                <li><a href="https://instagram.com/ecoboxce?igshid=YmMyMTA2M2Y=" target="_blank">Ecobox</a></li>
+                <li><a href="https://instagram.com/ecositiojuazeiro?igshid=YmMyMTA2M2Y=" target="_blank">Eco Sítio Juazeiro</a></li> 
+                <li><a href="https://instagram.com/nagauraorganicos?igshid=YmMyMTA2M2Y=" target="_blank">Nagaura Orgânicos</a></li>
+                <li><a href="https://instagram.com/sitiotanques?igshid=YmMyMTA2M2Y=" target="_blank">Sítio Tanques</a></li>
+                <li><a href="https://instagram.com/sitio_pachamama?igshid=YmMyMTA2M2Y=" target="_blank">Sítio Pachamama</a></li>
+                <li><a href="https://instagram.com/centrofreihumberto?igshid=YmMyMTA2M2Y=" target="_blank">Centro Frei Humberto</a></li>
+            </ul>
+        </div>
+        <div class="lojas">
+            <h2>Kombuchas</h2>
+            <ul>
+                <li><a href="https://instagram.com/atmakombucha?igshid=MzRlODBiNWFlZA==" target="_blank">Atma Kombucha</a></li>
+                <li><a href="https://instagram.com/hugotheophilo?igshid=MzRlODBiNWFlZA==" target="_blank">Hugo Teófilo</a></li>  
+            </ul>
+        </div>
     </main>
     
     <script>
