--- a/onde-comer.html
+++ b/onde-comer.html
@@ -50,7 +50,9 @@
                 <li><a href="https://instagram.com/vignolioficial?igshid=MzRlODBiNWFlZA==" target="_blank">Vignoli</a></li>
                 <li><a href="https://instagram.com/fornomorosi?igshid=MzRlODBiNWFlZA==" target="_blank">Morosi (Lá também vende lasanhas deliciosas!)</a></li>
                 <li><a href="https://instagram.com/pimentavegana?igshid=MzRlODBiNWFlZA==" target="_blank">Pimenta Vegana (Somente por encomenda!)</a></li>   
-            </ul>
+            </ul>    
+        </div>
+        <div class="lojas">
             <h2>Sushi!</h2>
             <ul>
                 <li><a href="https://instagram.com/makisushibar?igshid=MzRlODBiNWFlZA==" target="_blank">Maki Sushi</a></li>
