--- a/onde-comer.html
+++ b/onde-comer.html
@@ -59,6 +59,14 @@
                 <li><a href="https://instagram.com/sushi.vibe?igshid=MzRlODBiNWFlZA==" target="_blank">Casa Sushi Vibe</a></li>  
             </ul>
         </div>
+        <div class="lojas">
+            <h2>Not dog!</h2>
+            <ul>
+                <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
+                <li><a href="https://instagram.com/cafecultive?igshid=MzRlODBiNWFlZA==" target="_blank">Café Cultive</a></li>
+                <li><a href="https://instagram.com/heyjoefoodnbar?igshid=MzRlODBiNWFlZA==" target="_blank">Hey Joe</a></li>   
+            </ul>
+        </div>
     </main>
     
     <script>
