--- a/onde-comer.html
+++ b/onde-comer.html
@@ -67,6 +67,14 @@
                 <li><a href="https://instagram.com/heyjoefoodnbar?igshid=MzRlODBiNWFlZA==" target="_blank">Hey Joe</a></li>   
             </ul>
         </div>
+        <div class="lojas">
+            <h2>Pastel!</h2>
+            <ul>
+                <li><a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">GoVegan</a></li>
+                <li><a href="https://instagram.com/_sampastel?igshid=MzRlODBiNWFlZA==" target="_blank">Sampastel</a></li>
+                <li><a href="https://instagram.com/10pasteissul?igshid=MzRlODBiNWFlZA==" target="_blank">10 Pastéis</a></li>   
+            </ul>
+        </div>
     </main>
     
     <script>
