--- a/onde-comer.html
+++ b/onde-comer.html
@@ -75,6 +75,14 @@
                 <li><a href="https://instagram.com/10pasteissul?igshid=MzRlODBiNWFlZA==" target="_blank">10 Pastéis</a></li>   
             </ul>
         </div>
+        <div class="lojas">
+            <h2>Coxinha!</h2>
+            <ul>
+                <li><a href="https://instagram.com/rangoverdeveg?igshid=MzRlODBiNWFlZA==" target="_blank">Rango Verde</a></li>
+                <li><a href="https://instagram.com/bike_vegan?igshid=MzRlODBiNWFlZA==" target="_blank">Bike Vegan</a></li>
+                <li><a href="https://instagram.com/lifecoxinharia?igshid=MzRlODBiNWFlZA==" target="_blank">Life Coxinharia</a></li>   
+            </ul>
+        </div>
     </main>
     
     <script>
