--- a/onde-comer.html
+++ b/onde-comer.html
@@ -39,6 +39,7 @@
     </header>
     
     <main>
+        <p>Seja direcionado ao Instagram, ao clicar em cima dos nomes dos estabelecimentos.</p>
         <div class="lojas">
             <h2>Pizza!</h2>
             <ul>
