--- a/dicas.html
+++ b/dicas.html
@@ -63,6 +63,10 @@
                 <li><a href="https://instagram.com/hugotheophilo?igshid=MzRlODBiNWFlZA==" target="_blank">Hugo Teófilo</a></li>  
             </ul>
         </div>
+        <div class="lojas">
+            <h2>Jantar em 6 Tempos</h2>
+            <p>Caso você queira um jantar diferente e especial o <a href="https://instagram.com/restauranteonlineoficial?igshid=MzRlODBiNWFlZA==">Restaurante On-line</a>, do <a href="https://instagram.com/cheffredericojayme?igshid=MzRlODBiNWFlZA==">Chef Frederico Jayme</a> adapta o cardápio vegetariano para os veganos. É uma proposta bem interessante, a cada semana o cardápio muda, sempre inspirado em algum local do mundo. A refeição é composta por 6 mini porções. A comida é muito gostosa e elaborada, vale a pena conferir!</p>
+        </div>
     </main>
     
     <script>
