--- a/cafes.html
+++ b/cafes.html
@@ -38,6 +38,7 @@
     </header>
     
     <main>
+        <p>Algumas sugestões de cafeterias com opções vegetarianas.</p>
         <div class="lojas">
             <h3>Nüsse Café</h3>
             <p>Cappuccinos e outros drinks quentes ou gelados, com leite vegetal. Também tem opções de pratos salgados sem ingredientes de origem animal.</p>
