--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -39,6 +39,7 @@
     </header>
     
     <main>
+        <p>Lanches vegetarianos!</p>
         <div class="lojas">
             <h3>Karlota Delícias Artesanais</h3>
             <p>Focaccias, doces e salgados. A melhor focaccia que já comi! As sobremesas também são maravilhosas!</p>
