--- a/sorvetes.html
+++ b/sorvetes.html
@@ -42,9 +42,17 @@
         <p>Nessa sessão vou indicar as sorveterias veganas da cidade e também sorveterias com boas opções veganas de sorvete.</p>
         <div class="lojas">
             <h3>Sorvete da Reserva</h3>
-            <p>Sorveteria 100% vegana.</p>
+            <p>Sorveteria 100% vegana! Também tem brownie e cookie!</p>
             <p>Endereço: Rua Torres Câmara, 100 - Aldeota</p>
             <p>Clique <a href="https://instagram.com/sorvetedareserva?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Bellucci</h3>
+            <p>Clique <a href="https://instagram.com/belluccigelateria?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
+            <h3>Bacio di Latte</h3>
+            <p>Clique <a href="https://instagram.com/baciodilatte?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
     </main>
     
