--- a/o-que-comer.html
+++ b/o-que-comer.html
@@ -53,7 +53,7 @@
                 <li>Mini Kalzone: tem opção vegana.</li>
                 <li>Subway: tem opção vegana.</li>
                 <li>Bellucci: opções de sorvetes veganos.</li>
-                <li>Bacio: opções de sorvetes veganos.</li>
+                <li>Bacio di Latte: opções de sorvetes veganos.</li>
             </ul>
         </div>
         <div class="lojas">
@@ -65,7 +65,7 @@
                 <p>B.lem Padaria Portuguesa: tem pastel de nata vegano, delicioso. Também tem pães veganos.</p>
                 <li>Mini Kalzone: tem opção vegana.</li>
                 <li>Bellucci: opções de sorvetes veganos.</li>
-                <li>Bacio: opções de sorvetes veganos.</li>
+                <li>Bacio di Latte: opções de sorvetes veganos.</li>
             </ul>
         </div>
     </main>
