--- a/dicas.html
+++ b/dicas.html
@@ -60,7 +60,7 @@
             <h2>Kombuchas</h2>
             <ul>
                 <li><a href="https://instagram.com/atmakombucha?igshid=MzRlODBiNWFlZA==" target="_blank">Atma Kombucha</a></li>
-                <li><a href="https://instagram.com/hugotheophilo?igshid=MzRlODBiNWFlZA==" target="_blank">Hugo Teófilo</a></li>  
+                <li><a href="https://instagram.com/hugotheophilo?igshid=MzRlODBiNWFlZA==" target="_blank">Hugo Teophilo</a></li>  
             </ul>
         </div>
         <div class="lojas">
