--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <section>
             <h2>Diferença entre veganismo e vegetarianismo</h2>
-            <p>O veganismo não é uma dieta, é uma filosofia de vida comprometida com a causa do bem- estar animal. Por consequência, não faz sentido o vegano se alimentar de produtos derivados da exploração e do abate de animais.</p>
+            <p>O veganismo não é uma dieta, é uma filosofia de vida comprometida com a causa do bem-estar animal. Por consequência, não faz sentido o vegano se alimentar de produtos derivados da exploração e do abate de animais.</p>
             <p>Já o vegetarianismo é uma dieta alimentar a base de plantas, sem ingredientes de origem animal.</p>
             <p>Existem as variações do vegetarianismo, onde são inclusos alguns alimentos de origem animal, por exemplo, os lacto-vegetarianos consomem laticínios e os ovo-lacto-vegetarianos consomem ovos e derivados de leite.</p> 
             <p>O Veganismo SEMPRE é pelos animais! Então, se você segue uma dieta vegetariana estrita, mas o seu motivo é apenas ter  uma saúde melhor, você não é vegano, mas sim vegetariano. 
@@ -47,7 +47,7 @@
             </p>
             <p>Claro que radicalismo e extremismo nunca é legal e às vezes, por praticidade ou outro motivo, iremos precisar usar um ou outro produto fabricado por empresas que exploram animais.
             Mas devemos tentar ao máximo consumir os produtos dos empreendedores veganos, que são mais naturais, saudáveis, saborosos e muitas vezes até mais baratos. Assim contribuímos com a proposta vegana e nos mantemos coerentes.</p>
-            <p>Aqui, vou indicar estabelecimentos veganos e locais que têm opções inclusivas no cardápio. Meu objetivo é fortalecer o veganismo e ajudar os vegetarianos a saber onde encontrar opções vegetarianas gostosas na cidade de Fortaleza.</p><br>
+            <p>Aqui, vou indicar estabelecimentos veganos e locais que têm opções inclusivas no cardápio. Meu objetivo é fortalecer o veganismo e ajudar os vegetarianos a saber onde encontrar opções de comidas gostosas na cidade de Fortaleza.</p><br>
             <p style="text-align: center;">Se alimente conscientemente!</p>
         </section>
     </main>
