--- a/emporios.html
+++ b/emporios.html
@@ -65,7 +65,7 @@
     </script>
 
     <footer>
-        <p>Fortaleza, Ceará - 2023</p>
+        <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
 </html>
