--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -74,7 +74,7 @@
     </script>
 
     <footer>
-        <p>Fortaleza, Ceará - 2023</p>
+        <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
 </html>
