--- a/o-que-comer.html
+++ b/o-que-comer.html
@@ -81,7 +81,7 @@
     </script>
 
     <footer>
-        <p>Fortaleza, Ceará - 2023</p>
+        <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
 </html>
