--- a/queijos.html
+++ b/queijos.html
@@ -59,7 +59,7 @@
     </script>
 
     <footer>
-        <p>Fortaleza, Ceará - 2023</p>
+        <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
 </html>
