--- a/sorvetes.html
+++ b/sorvetes.html
@@ -67,7 +67,7 @@
     </script>
 
     <footer>
-        <p>Fortaleza, Ceará - 2023</p>
+        <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
     </footer>
 </body>
 </html>
