--- a/lanchonetes.html
+++ b/lanchonetes.html
@@ -57,6 +57,11 @@
             <p>Clique <a href="https://instagram.com/cozinhadaluz?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
         <div class="lojas">
+            <h3>Vovó Ginger</h3>
+            <p>Delícias veganas sob encomenda.</p>
+            <p>Clique <a href="https://instagram.com/vovoginger?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
+        <div class="lojas">
             <h3>GoVegan</h3>
             <p>Delivery</p>
             <p>Clique <a href="https://instagram.com/govegandelivery?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
