Atualizei restaurantes.html

--- a/restaurantes.html
+++ b/restaurantes.html
@@ -73,6 +73,7 @@
             <p>Comida elaborada com base na Medicina Ayurvédica. Deliciosa!</p>
             <p>Somente delivery</p>
             <p>Clique <a href="https://instagram.com/govindavegan?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+            <p>Clique <a href="https://instagram.com/govindagilberto?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o outro perfil.</p>
         </div>
         <div class="lojas">
             <h3>Terrana</h3>
