Alterei index.html e style.css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     
     <header>
         <h1>Bizu Vegano</h1>
+        <h2>Guia vegano de Fortaleza</h2>
         <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
         <menu id="menu">
             <ul>
