Atualizei index.html

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     </script>
 
     <footer>
-        <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará - 2023</p>
+        <p>Desenvolvido por Flávia Reis. Fortaleza, Ceará.</p>
+        <p>Última atualização em: outubro de 2023.</p>
     </footer>
 </body>
 </html>
