Atualizei festas.html

--- a/festas.html
+++ b/festas.html
@@ -68,6 +68,12 @@
             <p>Endereço: Rua João Regino, 38 - Parque Manibura</p>
             <p>Clique <a href="https://instagram.com/borgesbaker?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
+        <div class="lojas">
+            <h3>Vovó Ginger</h3>
+            <p>Tortas, pãezinhos e patês para confraternizações.</p>
+            <p>Endereço: Rua João Regino, 38 - Parque Manibura</p>
+            <p>Clique <a href="https://instagram.com/vovoginger?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
+        </div>
 
     </main>
     
