Atualizei festas.html

--- a/festas.html
+++ b/festas.html
@@ -70,8 +70,7 @@
         </div>
         <div class="lojas">
             <h3>Vovó Ginger</h3>
-            <p>Tortas, pãezinhos e patês para confraternizações.</p>
-            <p>Endereço: Rua João Regino, 38 - Parque Manibura</p>
+            <p>Tortas, pãezinhos e patês, sob encomenda, para confraternizações.</p>
             <p>Clique <a href="https://instagram.com/vovoginger?igshid=MzRlODBiNWFlZA==" target="_blank">AQUI</a> para visitar o Instagram da loja.</p>
         </div>
 
